<resources>
    <string name="app_name">ToDoListApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="save_task">Save Task</string>
    <string name="set_reminder_date_and_time">Set reminder date and time</string>
    <string name="enter_your_task">Enter Your Task</string>
    <string name="what_is_to_be_done">What is to be done?</string>
    <string name="enter_your_task_title">Enter Your Task Title</string>
    <string name="task_title">Task Title</string>
    <string name="time">Time</string>
    <string name="search">Search</string>
    <string name="exit">Exit</string>
</resources>