<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="newTaskToolbarTitle" type="String" />
        <variable name="taskFragment" type="com.busrayalcin.todolistapp.ui.fragment.TaskFragment" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragment.TaskFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarNewTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@{newTaskToolbarTitle}" />


        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/task_title"
            android:textColor="@color/colorYellow"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:id="@+id/titleInpLay"
            app:hintTextColor="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterTaskTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_task_title"
                android:maxLines="2"
                android:gravity="start"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="18sp"  />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/what_is_to_be_done"
            android:textColor="@color/colorYellow"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:hintTextColor="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent"
            android:layout_marginEnd="16dp"
            android:id="@+id/taskInpLay"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterYourTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_task"
                android:maxLines="10"
                android:gravity="start"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/set_reminder_date_and_time"
            android:textColor="@color/colorYellow"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:boxStrokeColor="@color/colorAccent"
            app:hintTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:drawableEnd="@drawable/date_range_24"
                android:drawableTint="@color/colorYellow"
                android:drawablePadding="8dp"
                android:focusable="false"
                android:hint="@string/set_date"
                android:inputType="date"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:hintTextColor="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent"
            android:visibility="visible"
            android:id="@+id/timeInptLay"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/set_time"
                android:inputType="time"
                android:focusable="false"
                android:id="@+id/setTime"
                android:cursorVisible="false"
                android:drawablePadding="8dp"
                android:drawableEnd="@drawable/access_time_24"
                android:drawableTint="@color/colorYellow"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:text="@string/save_task"
            android:id="@+id/buttonSave"
            android:onClick="@{() -> taskFragment.saveTask(enterTaskTitle.getText().toString(),enterYourTask.getText().toString(),setDate.getText().toString(),setTime.getText().toString())}"
            app:backgroundTint="@color/colorYellow"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end"
            app:cornerRadius="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>
</layout>